# smart_feeder

./: .codechecker.skip  .gitignore
.github/workflows/: ci.yml  clang-format.yml  pages.yml  release.yml  sca.yml
app/: CMakeLists.txt  Doxyfile  README.md  prj.conf  west.yml
app/boards/: esp32c6_devkitc_esp32c6_hpcore.overlay
app/docs/: mainpage.md
app/include/: check_health.h  communication.h  configuration.h  init.h  motor_control.h  watchdog.h
app/src/: check_health.c  communication.c  configuration.c  init.c  main.c  motor_control.c  shell_commands.c  watchdog.c
app/tests/integration/system/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/integration/system/src/: test_system.c
app/tests/unit/check_health/: CMakeLists.txt  testcase.yaml
app/tests/unit/check_health/src/: test_check_health.c
app/tests/unit/communication/: CMakeLists.txt  testcase.yaml
app/tests/unit/configuration/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/unit/configuration/src/: test_configuration.c
app/tests/unit/init/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/unit/init/src/: test_init.c
app/tests/unit/motor_control/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/unit/shell_commands/: CMakeLists.txt  prj.conf  testcase.yaml
app/tests/unit/shell_commands/src/: test_shell_commands.c
app/tests/unit/watchdog/: CMakeLists.txt  testcase.yaml
app/tests/unit/watchdog/src/: test_watchdog.c
